add GuestMapper and GuestRequest